31% até 4 errors 6% ate 5 errors